# bootmate

./: .gitignore  Cargo.toml  README.md  RELEASE.md  build.rs  meson.build  meson_options.txt
.github/workflows/: release.yml
data/: bootmate.gresource.xml  ch.srueegger.bootmate.desktop  ch.srueegger.bootmate.desktop.in  ch.srueegger.bootmate.metainfo.xml.in  meson.build
data/icons/: meson.build
data/ui/: window.ui
po/: POTFILES  de.po  en.po  meson.build
snap/: snapcraft.yaml
src/: application.rs  autostart.rs  config.rs  entry_row.rs  main.rs  meson.build  window.rs
